Fix spacing between action button

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 
 .actions {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    height: 100vh;
+    width: 100%;
 }
 
 h1 {
